# wss_tools

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION  LICENSE.rst  MANIFEST.in  README.rst  ah_bootstrap.py  appveyor.yml  azure-pipelines.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci_workflows.yml  codeql-analysis.yml  open_actions.yml
docs/: conf.py  index.rst  rtd-pip-requirements
docs/_static/: theme_overrides.css
docs/wss_tools/: index.rst  install.rst  ref_api.rst
docs/wss_tools/quip/: aboutquip.rst  ginga_files.rst  index.rst  mosaicauto.rst  savequip.rst  shared_text.txt  snrcalc.rst  usage_opfile.rst  usage_segid.rst  usage_simple.rst  usage_thumbs.rst
licenses/: LICENSE.rst  README.rst
notebooks/: quip_operation_file.ipynb
wss_tools/: __init__.py  _astropy_init.py  conftest.py
wss_tools/quip/: main.py  qio.py  setup_package.py
wss_tools/quip/config/: channel_Image.cfg.mosaicmode  channel_Image.cfg.normalmode  general.cfg  ginga_config.py.normalmode  ginga_config.py.segment_id  ginga_config.py.thumbnail  plugin_Contents.cfg  plugin_Cuts.cfg  plugin_FBrowser.cfg  plugin_Mosaic.cfg  plugin_SaveImage.cfg  plugin_Thumbs.cfg
wss_tools/quip/data/: quip_activity_log.xsd  quip_operation_file.xsd  quip_out.xsd
wss_tools/quip/plugins/: AboutQUIP.py  MosaicAuto.py  SNRCalc.py  SaveQUIP.py  SegIDHelper.py
wss_tools/tests/: coveragerc  setup_package.py  test_qio.py  test_utils_io.py
wss_tools/tests/data/: operation_file_001.xml  quip_activity_log_001.xml  quip_out_001.xml
wss_tools/utils/: io.py  mosaic.py  recenter.py
