[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
exclude = extern,sphinx

[metadata]
package_name = wss_tools
version = 0.3.8
description = Python tools for WSS
long_description = Python tools for JWST Wavefront Sensing Software
author = Pey Lian Lim
author_email = help@stsci.edu
license = BSD
url = https://github.com/STScI-JWST/wss_tools
edit_on_github = False
github_project = STScI-JWST/wss_tools

[entry_points]
quip = wss_tools.quip.main:_main
