[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = __init__.py,setup.py,conftest.py,conf.py

[metadata]
package_name = wss_tools
version = 1.0.1.dev
description = Python tools for WSS
long_description = Python tools for JWST Wavefront Sensing Software
author = Pey Lian Lim
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/wss_tools
edit_on_github = False
github_project = spacetelescope/wss_tools

[entry_points]
quip = wss_tools.quip.main:_main
