[tool:pytest]
minversion = 3.1
testpaths = "wss_tools" "docs"
norecursedirs = build docs/_build
astropy_header = true
xfail_strict = true

[metadata]
name = wss_tools
description = Python tools for WSS
long_description = Python tools for JWST Wavefront Sensing Software
long_description_content_type = text/plain
keywords = astronomy, astrophysics, image, analysis, visualization, JWST
author = Pey Lian Lim
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://github.com/spacetelescope/wss_tools
edit_on_github = False
github_project = spacetelescope/wss_tools
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
install_requires =
    numpy
    scipy
    astropy>=3
    ginga>=2.7
    stginga>=1.0
python_requires = >=3.5

[options.package_data]
wss_tools.quip = data/*, config/*

[options.extras_require]
test =
    pytest-astropy
docs =
    numpy
    matplotlib
    Cython
    sphinx-rtd-theme
    sphinx-astropy
    astropy
    ginga
    stginga

[options.entry_points]
console_scripts =
    quip = wss_tools.quip.main:_main

[coverage:run]
source = wss_tools
omit =
    wss_tools/_astropy_init*
    wss_tools/conftest*
    wss_tools/setup_package*
    wss_tools/*/setup_package*
    wss_tools/*/*/setup_package*
    wss_tools/tests/*
    wss_tools/*/tests/*
    wss_tools/*/*/tests/*
    wss_tools/version*
    */wss_tools/_astropy_init*
    */wss_tools/conftest*
    */wss_tools/setup_package*
    */wss_tools/*/setup_package*
    */wss_tools/*/*/setup_package*
    */wss_tools/tests/*
    */wss_tools/*/tests/*
    */wss_tools/*/*/tests/*
    */wss_tools/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
